--- a/web-server/front-end/less/freelancer.less
+++ b/web-server/front-end/less/freelancer.less
@@ -236,8 +236,8 @@ section.success {
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
    color:    #fff !important;
 }
-tbody tr:nth-child(odd) {
-   border-bottom: 1px solid @theme-primary;
+tbody tr:nth-child(2n) {
+   border-bottom: 1px solid white;
 }
 thead {
     font-size: 27px;
