--- a/web-server/front-end/less/freelancer.less
+++ b/web-server/front-end/less/freelancer.less
@@ -82,7 +82,7 @@ header {
 	}
 	img {
 		display: block;
-		margin: 0 auto 20px;
+		margin: 0 auto;
 	}
 	.intro-text {
 		.name {
@@ -193,14 +193,6 @@ section.success {
 	background: transparent;
 	transition: all 0.3s ease-in-out;
 	margin-top: 15px;
-	&:hover,
-	&:focus,
-	&:active,
-	&.active {
-		color: @theme-success;
-		background: white;
-		border: solid 2px white;
-	}
 }
 
 .btn-primary {
@@ -248,4 +240,5 @@ tbody tr td:first-child {
 }
 #check-btn {
     min-width: 182px;
+    height: 59px;
 }
