--- a/web-server/front-end/less/freelancer.less
+++ b/web-server/front-end/less/freelancer.less
@@ -231,6 +231,9 @@ section.success {
 tbody tr:nth-child(2n) {
    border-bottom: 1px solid white;
 }
+tbody tr:last-child {
+   border-bottom: none;
+}
 thead {
     font-size: 27px;
 }
@@ -238,6 +241,7 @@ tbody tr td:first-child {
     font-size: 20px;
     text-align: right;
 }
+
 #check-btn {
     min-width: 182px;
     height: 59px;
